# word-count

./: README.md
data/: book-summary-1.txt
word-count-clj/: README.md  project.clj
word-count-clj/src/word_count_clj/: core.clj
word-count-clj/test/word_count_clj/: core_test.clj
word-count-hs/: README.md  word-count-hs.cabal
word-count-hs/app/: Main.hs
word-count-hs/src/: Lib.hs
word-count-rs/: Cargo.toml  README.md
word-count-rs/src/: main.rs
