name:                word-count-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/metalrain/word-count
license:             BSD3
license-file:        LICENSE
author:              Otto Martikainen
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable word-count-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2
                     , containers >= 0.5
  default-language:    Haskell2010
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/metalrain/word-count
